[package]
name = "dualsense-edge-re"
version = "0.1.0"
edition = "2021"
description = "DualSense Edge controller reverse engineering toolkit"

[dependencies]
hidapi = "2.6"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
crc = "3"
colored = "3"
ctrlc = "3"
rusb = "0.9"
